WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171414
Data interaction should not load pasteboard content before performing the data operation
https://bugs.webkit.org/show_bug.cgi?id=171414
Summary
Data interaction should not load pasteboard content before performing the dat...
Wenson Hsieh
Reported
2017-04-27 19:55:43 PDT
Data interaction should not load pasteboard contents before performing the data operation
Attachments
Patch
(7.14 KB, patch)
2017-04-27 20:04 PDT
,
Wenson Hsieh
thorton
: review+
Details
Formatted Diff
Diff
Patch for EWS
(6.92 KB, patch)
2017-04-27 20:16 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2017-04-27 20:04:06 PDT
Created
attachment 308492
[details]
Patch
Wenson Hsieh
Comment 2
2017-04-27 20:05:00 PDT
<
rdar://problem/31878197
>
Wenson Hsieh
Comment 3
2017-04-27 20:16:35 PDT
Created
attachment 308494
[details]
Patch for EWS
Wenson Hsieh
Comment 4
2017-04-28 21:43:49 PDT
Committed <
http://trac.webkit.org/changeset/215917
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug