Source/WebCore/page/DragController.cpp
@@ -86,6 +86,7 @@
 
 #include <wtf/CurrentTime.h>
 #include <wtf/RefPtr.h>
+#include <wtf/SetForScope.h>
 #endif
 
 #if PLATFORM(COCOA)
@@ -245,6 +246,8 @@ inline static bool dragIsHandledByDocument(DragController::DragHandlingMethod dr
 
 bool DragController::performDragOperation(const DragData& dragData)
 {
+    SetForScope<bool> isPerformingDrop(m_isPerformingDrop, true);
+
     m_documentUnderMouse = m_page.mainFrame().documentAtPoint(dragData.clientPosition());
 
     ShouldOpenExternalURLsPolicy shouldOpenExternalURLsPolicy = ShouldOpenExternalURLsPolicy::ShouldNotAllow;
